# agents-docs-manager

./: .gitignore  Cargo.toml  README.md  docs.json
src/: cli.rs  document.rs  main.rs  namespace.rs  utils.rs
src/document/: inspection.rs  patch.rs  service.rs  sync.rs  types.rs
src/namespace/: config.rs  service.rs  types.rs
src/utils/: error.rs  index.rs  markdown.rs  output.rs  paths.rs  workspace.rs
tests/: cli.rs
