[package]
name = "agents-docs-manager"
version = "0.1.1"
edition = "2024"
autobins = false
description = "Manage AGENTS.md and Docs markdown indexes for agent-oriented repositories."
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/MarcellGu/agents-docs-manager"
keywords = ["agents", "documentation", "markdown", "cli"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "adm"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
diffy = "0.5.0"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2.0.18"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
